--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ button:active {
 }
 
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -74,6 +74,11 @@ button:active {
   color: #61dafb;
 }
 
+.silent-link {
+  text-decoration: none;
+  color: #000000;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -94,7 +99,7 @@ button:active {
 /* } */
 
 .block {
-  display: inline-block;
+  /* display: inline-block; */
   background-color: #ffffff; /* Белый фон */
   border-radius: 10px; /* Скругленные углы */
   padding: 15px; /* Отступы внутри блока */
